Update all changes and new files
